<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/powertrigdialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/powertrigdialogbanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/powertrigdialogbanner" />

    <TextView
        android:id="@+id/powertrigdialoghint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/powertrigdialoghint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/powertrigdialoginputhint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/powertrigdialoginputhint" />

        <EditText
            android:id="@+id/powertrigdialoginput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/powertriginputhint"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="dBμV" />

    </LinearLayout>

</LinearLayout>
