<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/forgetpassworddialog" >
    
    <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/forgetusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/username"/>
        
        <EditText 
            android:id="@+id/oldusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernamehint"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:inputType="textPersonName" >
        </EditText>
        
    </LinearLayout>
    
   	<LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        
        <TextView 
            android:id="@+id/forgetmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/mail"/>
        
        <EditText 
            android:id="@+id/oldmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mailhint"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm@."
            android:inputType="textEmailAddress" >
            </EditText>
        
    </LinearLayout>
    
   	
   

</LinearLayout>
